--- a/pom.xml
+++ b/pom.xml
@@ -88,5 +88,15 @@
         <artifactId>json</artifactId>
         <version>20140107</version>
     </dependency>
+      <dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>5.2.9.Final</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>5.2.4.Final</version>
+		</dependency>
 </dependencies> 
 </project>
